Fixed the spacing in the header with new image

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 2rem;
-  padding: 1.5rem 0;
+  padding: 1rem;
   border-bottom: 1px solid #c4c4c4;
   .logo {
     max-width: 14rem;
