--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -26,7 +26,7 @@
       top: 0;
       background: #333333;
       padding: 0;
-      margin: 104px 0 0 0;
+      margin: 98px 0 0 0;
       width: 30%;
       min-height: 100vh;
     }
@@ -37,9 +37,6 @@
     }
     a {
       margin-left: 1rem;
-    }
-    .hamburger {
-      margin: 0 1.25rem 0 0;
     }
     .profile_icon,
     .logout_icon {
